# adaptive-duelist-ai

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
ai/features/: feature_extractor.py
ai/layers/: behavior_model.py  prediction_engine.py  tactical_planner.py
ai/models/: base_predictor.py  ensemble_predictor.py  markov_predictor.py  sklearn_predictor.py
ai/profile/: archetype_classifier.py  (+2 more)
analytics/: decision_explainer.py  explanation_types.py  match_analyzer.py  pattern_miner.py  planner_metrics.py  report_builder.py
api/: app.py  deps.py  schemas.py
baselines/: README.md
config/: __init__.py  ai_config.yaml  config_loader.py  display_config.yaml  eval_config.yaml  game_config.yaml
data/: db.py  events.py  logger.py  schema.py  serializer.py  tick_snapshot.py
docs/: SCREENSHOTS.md
evaluation/: __init__.py  baselines.py  match_runner.py  metrics.py  regression_checker.py  weakness_analyzer.py
game/: arena.py  clock.py  engine.py  sound.py  state.py
rendering/: renderer.py
replay/: format.py  inspector.py  recorder.py  replay_player.py
scripts/: analyze_player.py  benchmark.py  bulk_simulate.py  check_regression.py  cli.py  create_baseline.py  db_maintenance.py  evaluate_ai.py  explain_match.py  export_match_report.py  export_results.py  headless_match.py  model_status.py  perf_profiler.py  profile_summary.py  replay_audit.py  run_api.py  run_self_play.py  session_status.py  train_and_promote.py  train_model.py  train_with_curriculum.py  verify_replay.py
tests/: conftest.py
ui/: app.js  index.html  styles.css
(+98 files in other folders)
