[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "adaptive-duelist-ai"
version = "0.1.0"
description = "1v1 combat sandbox with adaptive AI that learns player behavior"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "pygame>=2.5.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.8.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
include = ["game*", "ai*", "data*", "replay*", "analytics*", "rendering*", "ui*", "config*"]
